--- a/practica_3.ipynb
+++ b/practica_3.ipynb
@@ -37,14 +37,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "PRACTICA 3 = parte 1=8 marzo, parte 2=22 de marzo (hay sustentación)\n",
-        "la estructura interna es como diccionario, se encuentra una señal filtrada y no filtrada, se crea un vector de tiempo que depende de la frecuencia de muestreo (fs), se identifica de un ciclo a un ciclo con un pico (en la ECG), se asume que son independientes, en esta práctica se busca mirar si es determinista la señal, con todas las pruebas.(entrega 8 de marzo)\n",
+        "<p><img alt=\"udeA logo\" height=\"150px\" src=\"https://github.com/freddyduitama/images/blob/master/logo.png?raw=true\" align=\"left\" hspace=\"50px\" vspace=\"0px\" style=\"width:107px;height:152px;\"></p>\n",
+        "<h1><font color='0B5345'> <center>\n",
+        "Bioseñales y Sistemas </center></font></h1>\n",
+        "<h2><font color='0B5345'> <center>\n",
+        "Practica 3  </center></font></h2>\n",
+        "<h4><font color='0B5345'>\n",
+        "<center></center>\n",
+        "<center>Julian Olaya-Melissa Cadavid</center>\n",
+        "</font></h4>\n",
         "\n",
-        "EEG, tienen canales y epocas, cada electrodo es un canal, a los segmentos de tiempo de los canales se les conoce como epocas.\n",
-        "analizar el valor p\n",
-        "y debe tener concluisonesen los repositorios no se suben los datos\n",
-        "hay una archivo llamado .gitinore, decir que se ignore la carpeta donde estan los datos o tener otra ruta de carpeta de los datos, aparte del codigo(revisar los tipos de rutas)\n",
-        "\n"
+        "<font  face=\"Courier New\" size=\"3\">\n",
+        "<p1><center> </center></p1>\n",
+        "\n",
+        "\n",
+        "\n",
+        "<p3><center><b><font color='0B5345' face=\"Lucida Calligraphy,Comic Sans MS,Lucida Console\" size=\"5\">Universidad de Antioquia</font></b> </center></p3>\n",
+        "</font>\n"
       ],
       "metadata": {
         "id": "sm_iuLuwtnIC"
